<resources>
    <string name="app_name">臺中科大-教師資訊系統</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_end_icon">password</string>
    <string name="account">account</string>
    <string name="hint_account">請輸入帳號</string>
    <string name="hint_pwd">請輸入密碼</string>
    <string name="title_activity_add_teacher">AddTeacherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_fragment_second_line">FragmentSecondLine</string>
    <string name="title_activity_teacher_information_first">TeacherInformationFirstActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">實務經驗</string>
    <string name="menu_slideshow">計畫案產學</string>
    <string name="menu_ademic">學術活動</string>
    <string name="menu_award">獎項與榮譽</string>
    <string name="menu_license">證書</string>
    <string name="menu_event">校外服務經驗</string>
    <string name="menu_paper">期刊論文</string>
    <string name="menu_journal">研討會論文</string>
    <string name="menu_patent">專利</string>
    <string name="menu_gov">計畫案產學</string>
    <string name="menu_book">專書</string>
    <string name="menu_techtransfer">技術轉移授權</string>
    <string name="title_activity_list_announcectivity">ListAnnouncectivity</string>

    <string name="guest_login">guest</string>
    <string name="guest_pwd">guest</string>
</resources>