<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home_profile_first"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery" />
        <item
                android:id="@+id/nav_license"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_license" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_book" />
        <item
                android:id="@+id/nav_event"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_event" />
        <item
                android:id="@+id/nav_adamic"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_ademic" />
        <item
                android:id="@+id/nav_award"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_award" />
        <item
                android:id="@+id/nav_paper"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_paper" />
        <item
                android:id="@+id/nav_journal"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_journal" />
        <item
            android:id="@+id/nav_patent"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_patent" />
        <item
            android:id="@+id/nav_gov"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_gov" />
        <item
            android:id="@+id/nav_tech_transfer"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_techtransfer" />
    </group>
</menu>