<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home_profile_first">

    <fragment
            android:id="@+id/nav_home_profile_first"
            android:name="com.example.linteacher.ui.teacherdata.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.example.linteacher.ui.teacherdata.ui.experience.ExperienceFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery" />



    <fragment
            android:id="@+id/nav_license"
            android:name="com.example.linteacher.ui.teacherdata.ui.license.LicenseFragment"
            android:label="@string/menu_license"
            tools:layout="@layout/fragment_license" />

    <fragment
            android:id="@+id/nav_award"
            android:name="com.example.linteacher.ui.teacherdata.ui.award.AwardFragment"
            android:label="@string/menu_award"
            tools:layout="@layout/fragment_award" />
    <fragment
            android:id="@+id/nav_event"
            android:name="com.example.linteacher.ui.teacherdata.ui.off.OffFragment"
            android:label="@string/menu_event"
            tools:layout="@layout/fragment_event" />
    <fragment
            android:id="@+id/nav_adamic"
            android:name="com.example.linteacher.ui.teacherdata.ui.adamic.AdemicEventFragment"
            android:label="@string/menu_ademic"
            tools:layout="@layout/fragment_ademic_event" />
    <fragment
            android:id="@+id/nav_paper"
            android:name="com.example.linteacher.ui.teacherdata.ui.paper.PaperFragment"
            android:label="@string/menu_paper"
            tools:layout="@layout/fragment_paper" />

    <fragment
            android:id="@+id/nav_journal"
            android:name="com.example.linteacher.ui.teacherdata.ui.journal.JournalFragment"
            android:label="@string/menu_journal"
            tools:layout="@layout/fragment_journal" />
    <fragment
        android:id="@+id/nav_patent"
        android:name="com.example.linteacher.ui.teacherdata.ui.patent.PatentFragment"
        android:label="@string/menu_patent"
        tools:layout="@layout/fragment_patent" />

    <fragment
        android:id="@+id/nav_gov"
        android:name="com.example.linteacher.ui.teacherdata.ui.gov.GovFragment"
        android:label="@string/menu_gov"
        tools:layout="@layout/fragment_gov" />
    <fragment
        android:id="@+id/nav_book"
        android:name="com.example.linteacher.ui.teacherdata.ui.book.BookFragment"
        android:label="@string/menu_book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/nav_tech_transfer"
        android:name="com.example.linteacher.ui.teacherdata.ui.technologytrans.TechTransferFragment"
        android:label="@string/menu_techtransfer"
        tools:layout="@layout/fragment_tech_transfer" />
</navigation>